--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -8,6 +8,6 @@
       "esModuleInterop": true,
       "skipLibCheck": true
     },
-    "include": ["index.ts"]
+    "include": ["send-email.ts"]
   }
   
