--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,16 @@
 {
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/"
-      }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/send-email.ts",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/send-email",
+      "methods": ["POST"],
+      "dest": "api/send-email.ts"
+    }
+  ]
+}
