destroying express and use node js

--- a/api/jsconfig.json
+++ b/api/jsconfig.json
@@ -6,8 +6,10 @@
       "outDir": "dist",
       "strict": true,
       "esModuleInterop": true,
-      "skipLibCheck": true
+      "skipLibCheck": true,
+      "checkJs": true,         // 👈 включить проверку .js файлов
+      "allowJs": true
     },
-    "include": ["send-email.ts"]
+    "include": ["send-email.js"]
   }
   
